--- a/node-seguros/package.json
+++ b/node-seguros/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "seguros",
+  "name": "adasd",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "1.20.1",
     "cors": "^2.8.5",
-    "body-parser": "1.20.1"
-  }
+    "dexie": "^3.2.2",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
